# owimetadatabase-preprocessor

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  GitVersion.yml  README.md  noxfile.py  pyproject.toml  release.sh
.github/workflows/: ci.yml  docs.yml  publish.yml  python-package.yml  release.yml
docs/: conf.py  index.html  index.rst  installation.rst  usage.rst
docs/_build/doctrees/: API.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/api/: index.doctree  io.doctree
docs/_build/doctrees/api/geometry/: io.doctree  processing.doctree  structures.doctree
docs/_build/doctrees/api/locations/: io.doctree
docs/_build/html/: .buildinfo  API.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: API.rst.txt
docs/_build/html/_sources/api/: io.rst.txt
docs/_build/html/_sources/api/geometry/: io.rst.txt  processing.rst.txt  structures.rst.txt
docs/_build/html/api/: index.html  io.html
docs/_build/html/api/geometry/: io.html  processing.html  structures.html
docs/_build/html/api/locations/: io.html
docs/api/: index.rst
docs/api/fatigue/: data_objects.rst  io.rst
docs/api/geometry/: io.rst  processing.rst  structures.rst
docs/api/locations/: io.rst
docs/api/results/: io.rst
docs/api/soil/: index.rst  io.rst
docs/api/soil/processing/: soil_pp.rst
docs/api/soil/visualization/: soil_visualizer.rst
docs/api/utility/: exceptions.rst  index.rst  utils.rst
examples/: basic_example.ipynb  soilapi_example.ipynb
src/owimetadatabase_preprocessor/: __init__.py  io.py  utils.py
src/owimetadatabase_preprocessor/fatigue/: __init__.py  data_objects.py  io.py
src/owimetadatabase_preprocessor/geometry/: __init__.py  data.py  io.py  processing.py  pyles_geometry.py  structures.py
src/owimetadatabase_preprocessor/locations/: __init__.py  io.py
src/owimetadatabase_preprocessor/results/: __init__.py  io.py
src/owimetadatabase_preprocessor/soil/: __init__.py  io.py
src/owimetadatabase_preprocessor/soil/api/: io.py
src/owimetadatabase_preprocessor/soil/processing/: __init__.py  soil_pp.py
src/owimetadatabase_preprocessor/soil/utils/: __init__.py  exceptions.py
src/owimetadatabase_preprocessor/soil/visualization/: __init__.py  soil_visualizer.py
src/owimetadatabase_preprocessor/utility/: exceptions.py  utils.py
tests/: conftest.py  test_imports.py  test_io.py  test_utils.py
tests/fatigue/: test_io.py
tests/geometry/: conftest.py  test_io.py  test_processing.py  test_structures.py  test_utils.py
tests/geometry/data/: building_blocks.json  materials.json  monopile.json  processed_geometries.json  properties_bb.json  properties_sa.json  subassemblies.json  substructure.json  turbine.json
tests/geometry/fixtures/: io.py  processing.py  structures.py
tests/locations/: conftest.py  test_io.py
tests/soil/: conftest.py  test_io.py
tests/soil/processing/: test_soil_pp.py
tests/soil/processing/data/: api_bad_1.json  api_bad_1bis.json  api_bad_2.json  api_bad_3.json  api_ok_1.json  api_ok_2.json  api_ok_3.json  convert_input_pisa.json  convert_output_pisa.json  pisa_ok_1.json  pisa_ok_2.json  pisa_ok_3.json
