[tool.poetry]
name = "owimetadatabase-preprocessor"
version = "0.9.5"
description = "Package for preprocessing data from owimetadatabase."
authors = ["arsmlnkv <melnikov.arsene@gmail.com>"]
readme = "README.md"
homepage = "https://owi-lab.github.io/owimetadatabase-preprocessor/"
repository = "https://github.com/OWI-Lab/owimetadatabase-preprocessor"
license = "GNU General Public License v3.0"
keywords = ["owimetadatabase"]


[tool.poetry.dependencies]
# Main dependencies only
python = ">=3.9, <3.13"
plotly = ">=5.19.0, < 6.0.0"
requests = ">=2.30.0, <3.0.0"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
pandas = "^2.0.0"
groundhog = ">=0.11.0"
pyproj = ">=3.6.0, <4.0.0"
scipy = "^1.12.0"
tqdm = ">=4.66.2"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.5"


[tool.poetry.group.dev.dependencies]
# Move all development dependencies here
# Testing
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "*"
pytest-clarity = "*"
pytest-cov = "*"
requests-mock = "*"

# Code formatting & linting
isort = ">=5.12.0, <6.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.0.0"

# Type stubs
pandas-stubs = "*"
types-requests = "*"
pytest-stub = "*"
types-colorama = "*"
types-Pygments = "*"
types-setuptools = "*"

# Development tools
nox = ">=2023.4.22"
pre-commit = "*"
pydocstyle = "*"

# Documentation
sphinx = [
    {version = "^7.1.2", python = ">=3.9,<3.11"},
    {version = "^8.1.3", python = ">=3.11"}
]
sphinx_rtd_theme = "^3.0.2"

# Version management
bump2version = "^1.0.0"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning"
]
testpaths = ["tests"]
python_files = ["test_*.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
