[tool.poetry]
name = "owimetadatabase-preprocessor"
version = "0.10.0"
description = "Package for preprocessing data from owimetadatabase."
authors = ["arsmlnkv <melnikov.arsene@gmail.com>"]
readme = "README.md"
homepage = "https://owi-lab.github.io/owimetadatabase-preprocessor/"
repository = "https://github.com/OWI-Lab/owimetadatabase-preprocessor"
license = "GNU General Public License v3.0"
keywords = ["owimetadatabase"]


[tool.poetry.dependencies]
# Main dependencies only
python = ">=3.9, <3.13"
setuptools = ">=78.1.1"
virtualenv = ">=20.26.6"
plotly = ">=5.19.0, < 6.0.0"
requests = "^2.32.0"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
pandas = "^2.0.0"
groundhog = ">=0.11.0"
pyproj = ">=3.6.0, <4.0.0"
scipy = "^1.12.0"
tqdm = ">=4.66.3"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.0"
urllib3 = "^2.5.0"
zipp = ">=3.19.1"
certifi = ">=2025.8.3"


[tool.poetry.group.dev.dependencies]
# Move all development dependencies here
# Testing
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "*"
pytest-clarity = "*"
pytest-cov = "*"
requests-mock = "*"

# Code formatting & linting
ruff = ">=0.12.9"
mypy = "^1.0.0"

# Type stubs
pandas-stubs = "*"
types-requests = "*"
pytest-stub = "*"
types-colorama = "*"
types-Pygments = "*"
types-setuptools = "*"
types-python-dateutil = "*"
types-pytz = "*"

# Development tools
nox = ">=2023.4.22"
pre-commit = "*"

# Documentation
sphinx = [
    {version = "^7.1.2", python = ">=3.9,<3.11"},
    {version = "^8.1.3", python = ">=3.11"}
]
sphinx_rtd_theme = "^3.0.2"

# Version management
bump2version = "^1.0.0"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning"
]
testpaths = ["tests"]
python_files = ["test_*.py"]


[tool.ruff]
line-length = 127
target-version = "py39"


[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205"
]


[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.ruff.lint.isort]
known-first-party = ["owimetadatabase_preprocessor"]


[tool.mypy]
python_version = "3.12"
mypy_path = ["src/", "tests/"]
explicit_package_bases = true

pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true

ignore_missing_imports = true
follow_imports = "silent"

files = ["src/", "tests/"]


[[tool.mypy.overrides]]
module = "owimetadatabase_preprocessor.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true


[[tool.mypy.overrides]]
module = "matplotlib.*,plotly.*,pyproj.*,groundhog.*"
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
