[project]
name = "owimetadatabase-preprocessor"
version = "0.10.6"
description = "Package for preprocessing data from owimetadatabase."
authors = [{ name = "arsmlnkv", email = "melnikov.arsene@gmail.com" }]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["owimetadatabase"]
requires-python = ">=3.9,<3.14"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "filelock ==3.19.1 ; python_version < '3.10'",
    "filelock >=3.20.3 ; python_version >= '3.10'",
    "fonttools ==4.60.2 ; python_version < '3.10'",
    "fonttools >=4.61.0 ; python_version >= '3.10'",
    "plotly >=5.19.0",
    "requests >=2.32.0",
    "matplotlib ==3.9.4 ; python_version < '3.10'",
    "matplotlib >=3.10.0 ; python_version >= '3.10'",
    "numpy >=1.26.0,<2.0.0 ; python_version < '3.11'",
    "numpy >=2.0.0 ; python_version >= '3.11'",
    "pandas >=2.0.0",
    "groundhog >=0.11.0",
    "pyproj >=3.6.0,<3.7.0 ; python_version < '3.10'",
    "pyproj >=3.7.0,<3.7.2 ; python_version >= '3.10' and python_version < '3.11'",
    "pyproj >=3.7.2 ; python_version >= '3.11'",
    "scipy <1.14.0 ; python_version < '3.10'",
    "scipy >=1.14.0,<1.16.0 ; python_version >= '3.10' and python_version < '3.11'",
    "scipy >=1.16.0 ; python_version >= '3.11'",
    "tqdm >=4.66.0",
    "jinja2 >=3.1.6",
    "urllib3 >=2.6.3",
    "virtualenv >=20.36.1"
]


[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "docs"},
    {include-group = "dev-tools"},
    {include-group = "versioning"},
    {include-group = "compatibility"}
]
test = [
    "pytest >=8.4.0",
    "pytest-mock >=3.15.0",
    "pytest-xdist >=3.7.0",
    "pytest-clarity >=1.0.0",
    "pytest-cov >=7.0.0",
    "requests-mock >=1.12.1"
]
lint = [
    "ruff >=0.12.9"
]
typing = [
    "mypy >=1.10.0",
    "pandas-stubs >=2.0.0,<2.2.3.241009 ; python_version < '3.10'",
    "pandas-stubs >=2.2.3.241009 ; python_version >= '3.10'",
    "types-requests >=2.32.0",
    "pytest-stub >=1.0.0",
    "types-colorama >=0.4.0",
    "types-Pygments >=2.0.0",
    "types-setuptools >=68.0.0",
    "types-python-dateutil >=2.8.0",
    "types-pytz >=2023.3.0"
]
docs = [
    "sphinx >=7.2.5,<8.0.0 ; python_version < '3.10'",
    "sphinx >=8.0.0,<8.2.0 ; python_version >= '3.10' and python_version < '3.11'",
    "sphinx >=8.2.0,<9.0.0 ; python_version >= '3.11'",
    "sphinx_rtd_theme >=3.0.0,<4.0.0",
    "furo >=2025.7.19"
]
dev-tools = [
    "nox >=2023.4.22",
    "pre-commit >=3.0.0"
]
versioning = [
    "bump2version >=1.0.0"
]
compatibility = [
    "deptry >=0.23.0",
    "vermin >=1.6.0"
]


[project.urls]
homepage = "https://owi-lab.github.io/owimetadatabase-preprocessor/"
repository = "https://github.com/OWI-Lab/owimetadatabase-preprocessor"
documentation = "https://owi-lab.github.io/owimetadatabase-preprocessor/"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--import-mode=importlib",
    "--strict-markers",
    "--tb=short",
]


[tool.ruff]
line-length = 127
target-version = "py39"


[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205"
]


[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.ruff.lint.isort]
known-first-party = ["owimetadatabase_preprocessor"]


[tool.mypy]
python_version = "3.9"
mypy_path = ["src/", "tests/"]
explicit_package_bases = true

pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true

ignore_missing_imports = true
follow_imports = "silent"

files = ["src/", "tests/"]


[[tool.mypy.overrides]]
module = "owimetadatabase_preprocessor.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true


[[tool.mypy.overrides]]
module = "matplotlib.*,plotly.*,pyproj.*,groundhog.*"
ignore_missing_imports = true


[tool.deptry.per_rule_ignores]
DEP002 = ["scipy", "jinja2", "filelock", "fonttools", "virtualenv", "urllib3"]


[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
